--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     
+    <script src="https://kit.fontawesome.com/c13a0c5463.js" crossorigin="anonymous"></script>
     <title>Open Rent</title>
   </head>
   <body>
